# Catastrophic_Failure_KMeans

./: LICENSE  README.md  pyproject.toml
src/kmeans_jax/: __init__.py  _sdp.py  _spectral_clustering.py  kmeansjax_version.py  svd_utils.py
src/kmeans_jax/kmeans/: __init__.py  _common_functions.py  _hartigan.py  _init_methods.py  _kmeans_wrapper.py  _lloyd.py
tests/: test_kmeans.py
