[project]
name = "kmeans_jax"
description = "Numerical experiments for 'The Catastrophic Failure of the k-Means Algorithm in High Dimensions, and How Hartigan's Algorithm Avoids It.'"
readme = "README.md"
version = "0.0.1"
requires-python = ">=3.11"
keywords = []
authors = [
  { name = "Author 1"},
  { name = "Author 2"}
]
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "jax",
  "jaxlib",
  "numpy",
  "matplotlib",
  "tqdm",
  "scipy",
  "scikit-learn",
  "seaborn",
  "jaxtyping",
  "equinox",
  "numba",
  "cvxpy",
  "cryojax",
]

[project.optional-dependencies]
dev = [
  "hatch",
  "pytest",
  "mypy",
  "pre-commit",
  "ruff",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
  "src/kmeans_jax"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/kmeans_jax",
]


[tool.ruff]
extend-include = ["*.ipynb"]
lint.fixable = ["I001", "F401"]
line-length = 90
lint.ignore = ["E402", "E721", "E731", "E741", "F722"]
lint.select = ["E", "F", "I001"]
src = ["src"]

[tool.ruff.lint.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]
lines-after-imports = 2
order-by-type = false

[tool.black]
line-length = 90

[tool.pyright]
reportIncompatibleMethodOverride = true
include = ["kmeans_jax", "tests"]
